# s3clix

./: CHANGELOG.md  CONTRIBUTION.md  Cargo.toml  Dockerfile  LICENSE.md  MAINTAINERS.md  README.md  s3clix.yaml
.github/workflows/: docker-image.yml
src/: config.rs  http.rs  main.rs  s3.rs  sso.rs
ui/: angular.json  package-lock.json  package.json
ui/src/: index.html  main.ts  styles.scss
ui/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
ui/src/app/breadcrumbs/: breadcrumbs.component.html  breadcrumbs.component.scss  breadcrumbs.component.ts
ui/src/app/dialog/: dialog.component.html  dialog.component.scss  dialog.component.spec.ts  dialog.component.ts
ui/src/app/home/: home-routing.module.ts  home.component.html  home.component.scss  home.component.spec.ts  home.component.ts  home.module.ts
ui/src/app/models/: common.model.ts  files.model.ts
ui/src/app/not-found-page/: not-found-page.component.html  not-found-page.component.scss  not-found-page.component.spec.ts  not-found-page.component.ts
ui/src/app/services/: data-service.service.ts  local-storage.service.ts  notification.service.ts  popup.service.ts  theme.service.ts
ui/src/app/shared/: bytes-to-size.pipe.ts  encode-uri.pipe.ts  extension-extractor.pipe.ts  glass-hover.directive.ts  shorten-long-text.pipe.ts  trim-end-slash.pipe.ts  value-without-spaces-validator.ts
ui/src/environments/: common.ts  environment.prod.ts  environment.ts
ui/src/services/: data-service.service.ts  notification.service.ts
(+86 files in other folders)
